--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <!--  style='position:fixed;width:100%;z-index:1' -->
 
     <!-- header -->
-    <header class="_track" id='header' style='padding-bottom:70px'>
-        <div class='_overlay' style="background-color: rgb(58,58,70)"></div>
+    <header class="_track" id='header' style='padding-bottom:70px;background-image:url(assets/imgs/20190206_004354.jpg);'>
+        <div class='_overlay' style="background-color: rgba(24,24,32,0.96)"></div>
 
         <style>
-            .main-profile{z-index:20;margin-top:250px;position:relative;margin-bottom:40px}
+            .main-profile{z-index:20;margin-top:235px;position:relative;margin-bottom:40px}
             .main-profile *{position:relative!important}
-            .main-profile > img {max-width:400px;width:70%;position:relative;margin-left:120px;margin-right:auto}
-            .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0;margin-top:auto;margin-right:120px;margin-left:auto}
+            .main-profile > img {max-width:380px;width:70%;position:relative;margin-left:130px;margin-right:auto}
+            .main-profile > div {max-width:580px;width:80%;position:relative;margin-bottom:15px;margin-top:auto;margin-right:130px;margin-left:50px}
             .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
             .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
             .main-profile p {font-family:'noto-eng','noto-kor';font-size:13pt;color:#ffffea;text-align:left;margin-top:20px}
@@ -98,7 +98,6 @@
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
 
-    <!-- contents -->
     <div class="_contents">
     
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
