--- a/about.html
+++ b/about.html
@@ -78,6 +78,10 @@
 .width100 {width:100%}
 .timeline {display:flex;flex-direction:column;}
 .timeline > hr {border:none;padding:1.2px 0;background-color:black;}
+.trivia > img {width:100%;margin:30px auto;max-height:200px;margin-bottom:50px}
+.trivia > h1 {font-family: "noto-eng-b","noto-kor-b";font-size:32pt;text-align:center}
+.trivia > ul {width:85%;margin:auto}
+.trivia > ul > li {text-align:left;font-family:"noto-eng","noto-kor";font-size:11pt;line-height:1.5}
 </style>
 </head>
 
@@ -577,13 +581,6 @@
             </div>
         </section>
 
-        <style>
-            .trivia > img {width:100%;margin:40px auto;max-height:200px}
-            .trivia > h1 {font-family: "noto-eng-b","noto-kor-b";font-size:32pt;text-align:center}
-            .trivia > ul {width:85%;margin:auto}
-            .trivia > ul > li {text-align:left;font-family:"noto-eng","noto-kor";font-size:11pt;line-height:1.5}
-            /* .trivia > ul > li:before {content:'ㆍ'} */
-        </style>
         <section class="_track _content-section" id = "trivia" style='background-color:rgba(255,255,164,0.2)'>
             <div class='wider-piece trivia'>
                 <h1 class='eng'>Trivia</h1>
