--- a/default.html
+++ b/default.html
@@ -31,14 +31,14 @@
             <div class='right-menu-dropmenu'>
                 <div><a href='about.html?lang=kor'>소개</a></div>
                 <div><a href='resume.html?lang=kor'>이력</a></div>
-                <div><a href='posts.html?lang=kor'>글들</a></div>
+                <div><a href='posts.html?lang=kor'>글</a></div>
                 <div><a href='contact.html?lang=kor'>연락</a></div>
                 <div><a class='lang-eng' style='cursor:pointer'>English</a></div>
             </div>
             <div class='right-menu-menu'>
                 <div><a href='about.html?lang=kor'>소개</a></div>
                 <div><a href='resume.html?lang=kor'>이력</a></div>
-                <div><a href='posts.html?lang=kor'>글들</a></div>
+                <div><a href='posts.html?lang=kor'>글</a></div>
                 <div><a href='contact.html?lang=kor'>연락</a></div>
                 <div><a class='lang-eng' style='cursor:pointer'>English</a></div>
             </div>
