--- a/resume.html
+++ b/resume.html
@@ -149,7 +149,7 @@
             </a>
             <p class='eng'>
                 Hi, I'm <b>Jai Hyun Park</b>.
-                I am an <b>student</b> at <b>Seoul National University</b>, majoring in <b>mathematical sciences</b>.
+                I am a <b>student</b> at <b>Seoul National University</b>, majoring in <b>mathematical sciences</b>.
                 Currently, I am interested in <b>cryptography</b>: espeically in Homomorphic Encryption and Verifiable Computing.
             </p>
             <p class='kor'>
