--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .main-profile{z-index:20;margin-top:250px;position:relative;margin-bottom:40px}
         .main-profile *{position:relative!important}
         .main-profile > img {max-width:380px;width:70%;position:relative;margin-left:130px;margin-right:auto}
-        .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:15px;margin-top:auto;margin-right:130px;margin-left:50px}
+        .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:130px;margin-left:50px}
         .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
         .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
         .main-profile p {font-family:'noto-eng','noto-kor';font-size:13pt;color:#ffffea;text-align:left;margin-top:20px}
@@ -56,7 +56,7 @@
                 <h2 class='kor'>석박통합과정ㆍ서울대학교 수리과학부</h2>
                 <h2 class='eng'>Integrated PhD StudentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
                 <p class='kor'>생각하고 표현하길 좋아하는 대학원생입니다. 암호로 수학을 활용하는 걸 좋아합니다. 피아노와 드럼을 치며, 영화와 글짓기에도 관심이 많습니다.</p>
-                <p class='eng'>I am a graduate student who likes to think and express. I like the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
+                <p class='eng'>Hi, I am a graduate student who likes to think and express. I like the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
                 </p>
                 <ul>
                     <li>
