minor changes: update some status in the resume

--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
             </div>
         </section>
 
-        <section class='_track _content-section' id='passion' style='background-color:white;padding:80px 0px'>
+        <section class='_track _content-section' id='passion' style='background-color:white;padding:50px 0px'>
             <div class='flex-block wider-piece'>
                 <img src='assets/imgs/1530031945830.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' />
                 
@@ -262,7 +262,7 @@
             </div>
 
 
-            <div class='flex-block story wider-piece _track' id='story3'>
+            <div class='flex-block story wider-piece' id='story3'>
                 <div>
                     <img src='assets/imgs/20180916_120526-min.jpg'/>
                 </div>
@@ -303,7 +303,7 @@
             </div>
 
 
-            <div class='flex_r-block story wider-piece _track' id='story2'>
+            <div class='flex_r-block story wider-piece' id='story2'>
                 <div>
                     <img src='assets/imgs/20180922_180827-min.jpg'/>
                 </div>
@@ -586,7 +586,7 @@
                 <h1 class='eng'>Trivia</h1>
                 <h1 class='kor'>트리비아</h1>
 
-                <img src='assets/imgs/20190206_004354.jpg'>
+                <img src='assets/imgs/20191005_200341-min.jpg' style='object-fit: cover;'>
 
                 <ul>
                     <li class='eng'>
