--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 
     <style>
-        .main-profile{z-index:20;margin-top:250px;position:relative;margin-bottom:40px}
+        .main-profile{z-index:20;margin-top:270px;position:relative;margin-bottom:40px}
         .main-profile *{position:relative!important}
-        .main-profile > img {max-width:380px;width:70%;position:relative;margin-left:130px;margin-right:auto}
+        .main-profile > img {max-width:380px;width:50%;position:relative;margin-left:130px;margin-right:auto}
         .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:130px;margin-left:50px}
         .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
         .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
@@ -28,7 +28,8 @@
         .main-profile li img {width:22px;height:22px}
         .main-profile li p {display:inline;margin:auto 5px;font-family:'noto-eng','noto-kor';font-size:9.5pt;text-align:left;color:#ffffea;}
         @media screen and (max-width: 1000px) {
-            .main-profile{margin-top:150px}
+            .main-profile{margin-top:110px}
+            /* .main-profile > img {margin-top:150px;} */
             .main-profile > div {margin-top: 40px}
             .main-profile h1{text-align:center!important}
             .main-profile h2{text-align:center!important}
@@ -82,36 +83,6 @@
         </div>
     </header>
 
-    <!-- <section class='fixed' id='header' style='top:0;width:100%;padding-bottom:70px;background-image:url(assets/imgs/20190206_004354.jpg)'>
-        <div class='_overlay' style="background-color: rgba(24,24,32,0.95)"></div>
-        <div class='flex-block main-profile'>
-            <img src='assets/imgs/profile-picture.png'>
-            <div>
-                <h1 class='kor'>박 재 현</h1>
-                <h1 class='eng'>Jai Hyun Park</h1>
-                <h2 class='kor'>석박통합과정ㆍ서울대학교 수리과학부</h2>
-                <h2 class='eng'>Integrated PhD StduentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
-                <p class='kor'>생각하고 표현하길 좋아하는 대학원생입니다. 암호로 수학을 활용하는 걸 좋아합니다. 피아노와 드럼을 치며, 영화와 글짓기에도 관심이 많습니다.</p>
-                <p class='eng'>I am a graduate student who likes to think and express. I like the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
-                </p>
-                <ul>
-                    <li>
-                        <a href='mailto:jhyunp@snu.ac.kr'>
-                            <img src='assets/icons/logo-mail.png' />
-                            <p>jhyunp@snu.ac.kr</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href='https://jaihyunp.github.io'>
-                            <img src='assets/icons/logo-page.png' />
-                            <p>https://jaihyunp.github.io</p>
-                        </a>
-                    </li>
-                </u>
-            </div>
-        </div>
-    </section> -->
-
     <div class="_see-more" style='background-color:rgb(24,24,32);'>
         <div class='eng'>
             See my contents
@@ -123,6 +94,13 @@
     </div>
 
     <div class="_contents">
+        <!-- <section class='_track post-section' id='recent-posts'>
+            <h1>Recent Posts</h1>
+            <div class='wide-piece' style='margin:20px auto;padding:10px'>
+                <ul class='load-recent-posts load-posts'></ul>
+            </div>
+            <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt'>See more posts at <a href='posts.html'>HERE</a></p>
+        </section> -->
     
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
@@ -142,7 +120,7 @@
                 RESUME</a>
             <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
-                이력</a>
+                이력서</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
@@ -152,7 +130,7 @@
                 POSTS</a>
             <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(200,255,200)'>
-                글들</a>
+                글</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
