--- a/resume.html
+++ b/resume.html
@@ -149,13 +149,15 @@
             </a>
             <p class='eng'>
                 Hi, I'm <b>Jai Hyun Park</b>.
-                I am a <b>student</b> at <b>Seoul National University</b>, majoring in <b>mathematical sciences</b>.
+                I am an <b>Integrated PhD student</b> at <b>Seoul National University</b>, majoring in <b>mathematical sciences</b>.
                 Currently, I am interested in <b>cryptography</b>: espeically in Homomorphic Encryption and Verifiable Computing.
+                I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University.
             </p>
             <p class='kor'>
                 안녕하세요, 저는 <b>박재현</b>입니다.
-                저는 서울대학교 수리과학부에 재학 중인 <b>학부생</b>입니다.
+                저는 서울대학교 수리과학부 석박통합과정 재학 중인 <b>대학원생</b>입니다.
                 현재 저는 <b>암호론</b>을 연구 중입니다. 특히 동형암호 및 계산검증에 관심이 있습니다.
+                서울대학교 수리과학부에서 학부를 졸업했습니다.
             </p>
         </div>
 
