--- a/default.html
+++ b/default.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class='menubar' id='menubar'>
-        <div class='left-menu'><a class='logo-link' href='.'><img src = 'assets/icons/logo-inverted.png' style='width:50px;height:50px;position:relative;margin:0;padding:0;z-index:900;margin-top:5px'/></a></div>
+        <div class='left-menu'><a class='logo-link' href='.'><img src = 'assets/icons/logo-inverted.png' style='width:45px;height:45px;position:relative;margin:0;padding:0;z-index:900;margin-top:10px'/></a></div>
         <div class='right-menu eng'>
             <img src='assets/icons/rightmenu-button.png' class='right-menu-button'/>
             <div class='right-menu-dropmenu'>
@@ -58,7 +58,7 @@
     <footer id='footer'>
         <div class='_overlay' style='background-color: rgb(24,24,30)'></div>
         <div class='_footer-line'>
-            <h1>ⓒ 2019. <a href='http://jaihyunp.github.io/'>Jaihyun Park</a></h1>
+            <h1>ⓒ 2019 <a href='http://jaihyunp.github.io/'>Jaihyun Park</a></h1>
             <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
             <p>This page is under construction.</p>
             <p class='current-version'></p>
