--- a/tags.html
+++ b/tags.html
@@ -25,10 +25,10 @@
     <div class='load-menubar'></div>
 
     <!-- header -->
-    <header class="_track post-head" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
+    <header class="_track post-head tall-header" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
-        <div class='wide-piece post-info'>
+        <div class='wider-piece post-info'>
             <p class='post-title eng' style='color:rgb(200,255,200)'>
                 TAGS
             </p>
@@ -38,18 +38,10 @@
 
             <div id='all-tags'>
                 <ul class='post-keywords'>
-                    <li class='post-keyword'><a href='tags.html#clustering'>
-                        clustering</a></li>
-                    <li class='post-keyword'><a href='tags.html#cryptography'>
-                        cryptography</a></li>
-                    <li class='post-keyword'><a href='tags.html#HE'>
-                        HE</a></li>
-                    <li class='post-keyword'><a href='tags.html#homepage'>
-                        homepage</a></li>
-                    <li class='post-keyword'><a href='tags.html#jquery'>
-                        jquery</a></li>
-                    <li class='post-keyword'><a href='tags.html#programming'>
-                        programming</a></li>
+                    <li class='post-keyword'><a href='tags.html#diary'>
+                        diary</a></li>
+                    <li class='post-keyword'><a href='tags.html#web'>
+                        web</a></li>
                 </ul>
             </div>
     
@@ -64,45 +56,17 @@
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
         <hr style='border:none!important'>
 
-        <section class='_track narrow-piece load-tagged-posts' id='clustering'>
-            <h1>clustering</h1>
+        <section class='_track narrow-piece load-tagged-posts' id='diary'>
+            <h1>diary</h1>
             <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+                <li src='posts/hello-world.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
 
-        <section class='_track narrow-piece load-tagged-posts' id='cryptography'>
-            <h1>cryptography</h1>
+        <section class='_track narrow-piece load-tagged-posts' id='web'>
+            <h1>web</h1>
             <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-            </ul>
-        </section>
-
-        <section class='_track narrow-piece load-tagged-posts' id='HE'>
-            <h1>HE</h1>
-            <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-            </ul>
-        </section>
-
-        <section class='_track narrow-piece load-tagged-posts' id='homepage'>
-            <h1>homepage</h1>
-            <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-            </ul>
-        </section>
-
-        <section class='_track narrow-piece load-tagged-posts' id='jquery'>
-            <h1>jquery</h1>
-            <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-            </ul>
-        </section>
-
-        <section class='_track narrow-piece load-tagged-posts' id='programming'>
-            <h1>programming</h1>
-            <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+                <li src='posts/hello-world.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
 
