--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 
     <style>
-        .main-profile{z-index:20;margin-top:270px;position:relative;margin-bottom:40px}
+        .main-profile{z-index:20;margin:auto;margin-top:380px;position:relative;margin-bottom:40px}
         .main-profile *{position:relative!important}
-        .main-profile > img {max-width:380px;width:50%;position:relative;margin-left:130px;margin-right:auto}
-        .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:130px;margin-left:50px}
+        .main-profile > img {max-width:260px;width:40%;position:relative;margin-left:auto;margin-right:auto}
+        .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:auto;margin-left:auto}
         .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
         .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
         .main-profile p {font-family:'noto-eng','noto-kor';font-size:13pt;color:#ffffea;text-align:left;margin-top:20px}
@@ -54,6 +54,7 @@
             <div>
                 <h1 class='kor'>박 재 현</h1>
                 <h1 class='eng'>Jai Hyun Park</h1>
+                
                 <h2 class='kor'>석박통합과정ㆍ서울대학교 수리과학부</h2>
                 <h2 class='eng'>Integrated PhD StudentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
                 <p class='kor'>생각하고 표현하길 좋아하는 대학원생입니다. 암호로 수학을 활용하는 걸 좋아합니다. 피아노와 드럼을 치며, 영화와 글짓기에도 관심이 많습니다.</p>
@@ -78,7 +79,7 @@
                             <p>jaihyun.park.9</p>
                         </a>
                     </li>
-                </u>
+                </ul>
             </div>
         </div>
     </header>
