--- a/default.html
+++ b/default.html
@@ -47,7 +47,7 @@
 
     <div id='post-footer' class='flex-block' style='background-color:rgb(220,220,220);width:80%;max-width:600px;border-top:1pt solid darkslategray;border-bottom:1pt solid darkslategray;margin:30px auto;padding:40px 0px;'>
         <img src='assets/imgs/profile-picture.png' style='height:85px;width:85px;margin:auto'/>
-        <div style='margin:auto;padding:0px 20px'>
+        <div style='width:80%;max-width:350px;margin:auto'>
             <p class='eng post-footer-name' style='position:relative;text-decoration:none;text-align:center;font-family:"noto-eng","noto-kor";font-size:15pt;color:darkslategray;display:block;text-align:left;'>JaiHyun Park</p>
             <p class='kor post-footer-name' style='position:relative;text-decoration:none;text-align:center;font-family:"noto-eng","noto-kor";font-size:15pt;color:darkslategray;display:block;text-align:left;'>박재현</p>
             <p class='eng post-footer-affl' style='position:relative;text-decoration:none;text-align:center;font-family:"noto-eng-i","noto-kor-i";font-size:9pt;color:darkslategray;display:block;margin-bottom:5px;text-align:left;'>Integrated PhD StudentㆍDepartment of Mathematical Sciences, Seoul National University</p>
