minor changes: border at the boundary of footer

--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,7 @@
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
 
-    <div class='_contents'>
+    <div class='_contents' style='border:none'>
 
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
 
