--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
 
-    <div class="_contents">
+    <div class="_contents" style='border:none'>
         <!-- <section class='_track post-section' id='recent-posts'>
             <h1>Recent Posts</h1>
             <div class='wide-piece' style='margin:20px auto;padding:10px'>
