--- a/resume.html
+++ b/resume.html
@@ -174,7 +174,7 @@
 
     
     <!-- contents -->
-    <div class="_contents">
+    <div class="_contents" style='border:none'>
 
         <!-- navigation -->
         <nav class="_nav-bar _navbar-collapse eng">
