--- a/posts.html
+++ b/posts.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- contents -->
-    <div class="_contents">
+    <div class="_contents" style='border:none'>
 
         <!-- navigation -->
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
