add license to individual files

--- a/about.html
+++ b/about.html
@@ -1,3 +1,27 @@
+<!------------------------------------------------------------------------------
+MIT License
+
+Copyright (c) 2019 Jai Hyun Park
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+------------------------------------------------------------------------------>
+
 <!DOCTYPE html>
 
 <html lang="en" style='display:none'>
@@ -191,7 +215,7 @@
 
                         I study math to explore concepts.
                         I obtained a bachelor's degree in math at Seoul National University, and entered the graduate school at SNU in 2020.
-                        I wanna use the (mathematical) concepts in real life. I love the way cryptography interacts with the world.<br>
+                        I want to utilize the (mathematical) concepts in real life. I love the way cryptography interacts with the world.<br>
                         
                         I appreciate art to learn emotions. I especially enjoy movies and music.
                         I desire to express my feelings as well. I write writings and play the piano and drum.
@@ -606,6 +630,12 @@
                     </li>
                     <li class='kor'>
                         6살 때부터 피아노를 쳤고, 19살 때부터 드럼을 배웠습니다.
+                    </li>
+                    <li class='eng'>
+                        I have passed the Qualifying Exam of SNU BEFORE I enter the graduate school.
+                    </li>
+                    <li class='kor'>
+                        서울대학교 대학원 입학 전에 논문자격시험을 통과했습니다.
                     </li>
                 </ul>
 
