--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,27 @@
+<!------------------------------------------------------------------------------
+MIT License
+
+Copyright (c) 2019 Jai Hyun Park
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+------------------------------------------------------------------------------>
+
 <!DOCTYPE html>
 <html lang="en" style='display:none'>
 
@@ -398,8 +422,8 @@
             <h1 class='kor'>수상내역</h1>
         
             <div class = 'big-piece subsection'>
-                <h1 class='eng'>Academic Awards</h1>
-                <h1 class='kor'>학술상</h1>
+                <h1 class='eng'>Awards</h1>
+                <h1 class='kor'>수상</h1>
                 <ul class='brief-ul'>
                     <li>   
                         <h1 class='eng'>Seoul National University Dean's list</h1>
