Update my status: undergrad -> integrated PhD

--- a/about.html
+++ b/about.html
@@ -1,7 +1,19 @@
-<!------------------------------------------------------------------------------
+<!----------------------------------------------------------------------------
+|        _______       _    _                     _____                      |
+|       |__   __|   _ | |  | |                   |  __ \                     |
+|          | |     (_)| |__| |                   | |__) |         _          |
+|          | | __ _ _ |  __  |_   _ _   _ _ __   |  ___/__ _ _ __| | __      |
+|       _  | |/ _` | || |  | | | | | | | | `_ \  | |   / _` | '__| |/ /      |
+|      / |_| | (_| | || |  | | |_| | |_| | | | | | |  | (_| | |  |   <       |
+|      \____/ \__,_|_||_|  |_|\__  |\__,_|_| |_| |_|   \__,_|_|  |_|\_\      |
+|                            ,._/ /                                          |
+|      jhyunp@snu.ac.kr      \___/           https://jaihyunp.github.io      |
+|                                                                            |
+----------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------
 MIT License
 
-Copyright (c) 2019 Jai Hyun Park
+Copyright (c) 2019-2020 Jai Hyun Park
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +32,8 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
------------------------------------------------------------------------------->
+----------------------------------------------------------------------------->
+
 
 <!DOCTYPE html>
 
@@ -182,9 +195,9 @@ SOFTWARE.
                     </li>
                     <li>
                         <h1 class='eng'>Recently Watched</h1>
-                        <p class='eng'>Frozen 2</p>
+                        <p class='eng'>Parasite</p>
                         <h1 class='kor'>최근 관람</h1>
-                        <p class='kor'>겨울왕국2</p>
+                        <p class='kor'>기생충</p>
                     </li>
                     <li>
                         <h1 class='eng'>Affiliation</h1>
@@ -333,13 +346,13 @@ SOFTWARE.
                 </div>
                 <div>
                     <h1 class='eng'>Where I live</h1>
-                    <h1 class='kor'>혜화동</h1>
+                    <h1 class='kor'>서울</h1>
                     <p class='eng'>
-                        My current residence is in Hyehwa-dong, Seoul, Korea. 
-                        There are several traditional palaces and a number of amiable cafes around my home.
+                        My current residence is in Seoul, Korea, nearby SNU. 
+                        I take a walk on a small mountain near my house every week.
                     </p>
                     <p class='kor'>
-                        저는 지금 서울 혜화동에 삽니다. 집 주변에 고궁과 예쁜 카페들이 많습니다. 
+                        저는 지금 서울 관악구에 삽니다. 집 주변 작은 산을 매주 산책해요.
                     </p>
                 </div>
             </div>
@@ -351,11 +364,11 @@ SOFTWARE.
                     <h1 class='eng'>Where I Belong</h1>
                     <h1 class='kor'>서울대학교</h1>
                     <p class='eng'>
-                        I am currently in the undergraduate course at the Department of Mathematical Sciences, Seoul National University (SNU). 
-                        I go to graduate school at SNU in 2020.
+                        I am currently in the integrated Ph.D course at the Department of Mathematical Sciences, Seoul National University (SNU). 
+                        I graduated from SNU in 2020.
                     </p>
                     <p class='kor'>
-                        현재 저는 서울대학교 수리과학부 학부과정에 있습니다. 서울대학교 수리과학부 석박통합과정에 2020년 진학 예정입니다.
+                        현재 저는 서울대학교 수리과학부 석박통합과정에 있습니다. 서울대학교 수리과학부 학부를 2020년 졸업했습니다.
                     </p>
                 </div>
             </div>
@@ -498,11 +511,11 @@ SOFTWARE.
                         <span></span>
 
                         <h2 class='kor'>서울대 입학</h2>
-                        <p class='kor'>수리과학부로 학부과정에 입학했다. 2020년 2월 졸업예정.</p>
+                        <p class='kor'>수리과학부로 학부과정에 입학했다. 2020년 2월 졸업했다.</p>
                         <h2 class='eng'>Entrance - SNU</h2>
                         <p class='eng'>
                             Entered the mathematical science department of Seoul National University in Mar '13.
-                            Graduate in Feb '20 (planned).</p>
+                            Graduate in Feb '20.</p>
 
                         <h2 class='kor'>뇌출혈 공연 - 드럼</h2>
                         <p class='kor'>수리과학부 밴드모임 뇌출혈 중 팀 '승보'에서 드럼으로 공연했다.</p>
@@ -589,15 +602,11 @@ SOFTWARE.
                         <h1>2020</h1>
                         <span></span>
 
-                        <h2 class='kor'>서울대 학부 졸업</h2>
-                        <p class='kor'>예정.</p>
-                        <h2 class='eng'>Commencement Ceremony</h2>
-                        <p class='eng'>Up Coming Event (26 Feb '20) : Graduate SNU.</p>
-
                         <h2 class='kor'>서울대 석박통합과정 입학</h2>
-                        <p class='kor'>수리과학부 예정.</p>
+                        <p class='kor'>수리과학부에 입학했다.</p>
                         <h2 class='eng'>Entrance - SNU Graduate School</h2>
-                        <p class='eng'>Up Coming Event (Mar '20) : Go to the graduate school: the Department of Mathematical Sciences in SNU.</p>
+                        <p class='eng'>Entered the mathematical science department of Seoul National University in Mar '20.</p>
+                        </p>
                     </div>
                 </div>
                 <div class='width100' style='border-right-style:dashed;height:25px'></div>
@@ -626,13 +635,13 @@ SOFTWARE.
                         새로운 감정을 느끼게 하는 예술작품들을 좋아합니다. 영화 '이터널 선샤인', '인 디 에어', '월 플라워', '베스트 오퍼' 처럼요.
                     </li>
                     <li class='eng'>
-                        I have played piano since I was 5 and drum since I was 17.
+                        I play piano since I was 5 and drum since I was 17.
                     </li>
                     <li class='kor'>
                         6살 때부터 피아노를 쳤고, 19살 때부터 드럼을 배웠습니다.
                     </li>
                     <li class='eng'>
-                        I have passed the Qualifying Exam of SNU BEFORE I enter the graduate school.
+                        I passed the Qualifying Exam of SNU BEFORE entering the graduate school.
                     </li>
                     <li class='kor'>
                         서울대학교 대학원 입학 전에 논문자격시험을 통과했습니다.
