--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,19 @@
-<!------------------------------------------------------------------------------
+<!----------------------------------------------------------------------------
+|        _______       _    _                     _____                      |
+|       |__   __|   _ | |  | |                   |  __ \                     |
+|          | |     (_)| |__| |                   | |__) |         _          |
+|          | | __ _ _ |  __  |_   _ _   _ _ __   |  ___/__ _ _ __| | __      |
+|       _  | |/ _` | || |  | | | | | | | | `_ \  | |   / _` | '__| |/ /      |
+|      / |_| | (_| | || |  | | |_| | |_| | | | | | |  | (_| | |  |   <       |
+|      \____/ \__,_|_||_|  |_|\__  |\__,_|_| |_| |_|   \__,_|_|  |_|\_\      |
+|                            ,._/ /                                          |
+|      jhyunp@snu.ac.kr      \___/           https://jaihyunp.github.io      |
+|                                                                            |
+----------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------
 MIT License
 
-Copyright (c) 2019 Jai Hyun Park
+Copyright (c) 2019-2020 Jai Hyun Park
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +32,8 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
------------------------------------------------------------------------------->
+----------------------------------------------------------------------------->
+
 
 <!DOCTYPE html>
 <html lang="en" style='display:none'>
@@ -241,8 +254,32 @@ SOFTWARE.
                         <div class='info-tag'>
                             <h1 class='eng'>Seoul National University</h1>
                             <h1 class='kor'>서울대학교</h1>
-                            <p class='eng'>2013.3. - 2020.2. (planned)</p>
-                            <p class='kor'>2013.3. - 2020.2. (예정)</p>
+                            <p class='eng'>2020.3. - present</p>
+                            <p class='kor'>2020.3. - 현재</p>
+                            <p class='eng'>@Seoul, Korea</p>
+                            <p class='kor'>@서울, 한국</p>
+                        </div>
+
+                        <div class='description'>
+                            <h1 class='eng'>Integrated PhD - Mathematical Sciences</h1>
+                            <h1 class='kor'>석박통합과정 - 수리과학부</h1>
+                            <p class='eng'>
+                                I am studying cryptography, advised by Prof. Jung Hee Cheon. 
+                                Currently I am mostly interested in verifiable computating, homomorphic encryption and its applications. 
+                            </p>
+                            <p class='kor'>
+                                암호학을 연구 중이며, 천정희 교수님 지도 하에 있습니다. 
+                                현재 계산검증, 동형암호 및 응용에 가장 관심이 있습니다.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class='flex-block'>
+                        <div class='info-tag'>
+                            <h1 class='eng'>Seoul National University</h1>
+                            <h1 class='kor'>서울대학교</h1>
+                            <p class='eng'>2013.3. - 2020.2.</p>
+                            <p class='kor'>2013.3. - 2020.2.</p>
                             <p class='eng'>@Seoul, Korea</p>
                             <p class='kor'>@서울, 한국</p>
                         </div>
@@ -466,7 +503,7 @@ SOFTWARE.
                         <p class='kor'>- 한국장학재단</p>
                     </li>  
 
-                    <li>   
+                    <!-- <li>   
                         <h1 class='eng'>Samsung Junior Frontier Leadership Scholarship</h1>
                         <h1 class='kor'>삼성 Junior Frontier Leadership 장학금</h1>
                         <p>2012.3. - 2013.2.</p>
@@ -480,7 +517,7 @@ SOFTWARE.
                         <p>2011.3. - 2012.2.</p>
                         <p class='eng'>- Seun Steel Co.</p>
                         <p class='kor'>- 세운철강 Co.</p>
-                    </li>  
+                    </li>   -->
                 </ul>
             </div>
         </section>
