Simplify the About page

--- a/resume.html
+++ b/resume.html
@@ -376,7 +376,7 @@ SOFTWARE.
 
                     <li class='flex-block'>
                         <div class='info-tag'>
-                            <h1 class='eng'>Republic of Korea Army - Surgeant</h1>
+                            <h1 class='eng'>Republic of Korea Army - Sergeant</h1>
                             <h1 class='kor'>대한민국 육군</h1>
                             <p>2016.7.4. - 2018.4.3.</p>
                             <p class='eng'>@Korea</p>
@@ -385,7 +385,7 @@ SOFTWARE.
         
                         <div class='description'>
                             <p class='eng'>
-                                I have discharged upon completing military service as a surgeant.
+                                I have discharged upon completing military service as a sergeant.
                                 During my time in army, I personally studied cryptography (ECC and Lattice based cryptography) and programming (C/C++, Shell, Java, Python, Matlab and Haskel).
                             </p>
                             <p class='kor'>
